--- a/html/productos.html
+++ b/html/productos.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap CSS -->
+    <title>Productos</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Productos</title>
   </head>
   <body>
     <!-- Navbar Bootstrap -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark px-3">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img src="../assets/logo.png" alt="Logo" width="120" />
+        <a class="navbar-brand" href="./index.html">
+          <img
+            src="./assets/logos/logo.png"
+            alt="Logo"
+            width="120"
+            class="logo-img"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -31,147 +35,322 @@
           id="navbarNav"
         >
           <ul class="navbar-nav gap-2">
-            <li class="nav-item"><a class="nav-link" href="#">Tienda</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Soluciones</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Comunidad</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Ofertas</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Iniciar sesión</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Registrarse</a>
+              <a class="nav-link" href="../html/productos.html">Tienda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/sobre-nosostros.html"
+                >Sobre Nosotros</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/ofertas.html">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/login.html">Iniciar sesión</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../html/registro.html">Registrarse</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <!-- Contenido principal -->
+    <main class="container py-5">
+      <div class="row">
+        <!-- Barra lateral -->
+        <aside class="col-12 col-md-3 mb-4">
+          <h4>Filtros</h4>
+          <form>
+            <div class="mb-3">
+              <label for="buscar" class="form-label">Buscar</label>
+              <input
+                type="text"
+                id="buscar"
+                class="form-control"
+                placeholder="Palabra clave"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="ram" class="form-label">RAM</label>
+              <select id="ram" class="form-select">
+                <option value="">Todas</option>
+                <option>4 GB</option>
+                <option>8 GB</option>
+                <option>16 GB</option>
+                <option>32 GB</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="procesador" class="form-label">Procesador</label>
+              <select id="procesador" class="form-select">
+                <option value="">Todos</option>
+                <option>Intel i3</option>
+                <option>Intel i5</option>
+                <option>Intel i7</option>
+                <option>AMD Ryzen 5</option>
+                <option>AMD Ryzen 7</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="almacenamiento" class="form-label"
+                >Almacenamiento</label
+              >
+              <select id="almacenamiento" class="form-select">
+                <option value="">Todos</option>
+                <option>128 GB</option>
+                <option>256 GB</option>
+                <option>512 GB</option>
+                <option>1 TB</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="precio" class="form-label">Precio máximo</label>
+              <input
+                type="range"
+                class="form-range"
+                id="precio"
+                min="0"
+                max="3000"
+                step="100"
+              />
+              <span id="precio-valor">0</span> USD
+            </div>
+            <div class="mb-3">
+              <label for="color" class="form-label">Color</label>
+              <select id="color" class="form-select">
+                <option value="">Todos</option>
+                <option>Negro</option>
+                <option>Blanco</option>
+                <option>Gris</option>
+                <option>Rojo</option>
+                <option>Azul</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">
+              Aplicar Filtros
+            </button>
+          </form>
+        </aside>
 
-    <section class="productos container my-5">
-      <h2 class="text-center mb-4">Nuestros Productos</h2>
-      <div class="row g-4">
-        <!-- Producto 1 -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card h-100">
-            <img src="../assets/HP-Laptop-15-12th-Gen-i5-1235U.webp.png" class="card-img-top" alt="Laptop" />
-            <div class="card-body">
-              <h5 class="card-title">Laptop HP</h5>
-              <p class="card-text">
-                Potente y ligera, ideal para trabajo y estudio.
-              </p>
-              <p class="price">$2.500.000</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
+        <!-- Productos -->
+        <section class="col-12 col-md-9">
+          <h4>Productos</h4>
+          <div class="row">
+            <!-- Producto 1 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/HP-Laptop-15-12th-Gen-i5-1235U.webp.png"
+                  class="card-img-top"
+                  alt="Producto 1"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Hp</h5>
+                  <p class="card-text">Intel i5, 256 GB SSD, color negro.</p>
+                  <p class="card-text"><strong>$899.99</strong></p>
+                  <!-- Dentro de productos.html -->
+                  <a href="../html/detalle-producto.html" class="btn-ver-mas"
+                    >Ver más</a
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- Producto 2 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/macbook-pro.png"
+                  class="card-img-top"
+                  alt="Producto 2"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Macbook</h5>
+                  <p class="card-text">Ryzen 7, 512 GB SSD, color gris.</p>
+                  <p class="card-text"><strong>$1199.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 3 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/iphone15.png"
+                  class="card-img-top"
+                  alt="Producto 3"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Iphone</h5>
+                  <p class="card-text">Intel i3, 128 GB, color negro.</p>
+                  <p class="card-text"><strong>$499.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 4 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/inalamnricos-bluetooth.png"
+                  class="card-img-top"
+                  alt="Producto 2"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Audifonos Inalambricos</h5>
+                  <p class="card-text">Ryzen 7, 512 GB SSD, color gris.</p>
+                  <p class="card-text"><strong>$1199.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 5 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/airpods_2generacion.png"
+                  class="card-img-top"
+                  alt="Producto 2"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Airpods Pro</h5>
+                  <p class="card-text">Ryzen 7, 512 GB SSD, color gris.</p>
+                  <p class="card-text"><strong>$1199.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 6 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/ipad-pro-12.9.png"
+                  class="card-img-top"
+                  alt="Producto 2"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Ipad</h5>
+                  <p class="card-text">Ryzen 7, 512 GB SSD, color gris.</p>
+                  <p class="card-text"><strong>$1199.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 3 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/smartwach.png"
+                  class="card-img-top"
+                  alt="Producto 3"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Smarwatch</h5>
+                  <p class="card-text">Intel i3, 128 GB, color negro.</p>
+                  <p class="card-text"><strong>$499.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 3 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/OPPOA60_1.png"
+                  class="card-img-top"
+                  alt="Producto 3"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Oppo</h5>
+                  <p class="card-text">Intel i3, 128 GB, color negro.</p>
+                  <p class="card-text"><strong>$499.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <!-- Producto 3 -->
+            <div class="col-12 col-sm-6 col-lg-4">
+              <div class="card mb-4">
+                <img
+                  src="../assets/productos/Smartwatchi7pro.png"
+                  class="card-img-top"
+                  alt="Producto 3"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Smartwat Pro</h5>
+                  <p class="card-text">Intel i3, 128 GB, color negro.</p>
+                  <p class="card-text"><strong>$499.99</strong></p>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-
-        <!-- Producto 2 -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card h-100">
-            <img
-              src="../assets/SamsungS24Plus.png"
-              class="card-img-top"
-              alt="Smartphone"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Smartphone Galaxy</h5>
-              <p class="card-text">Pantalla AMOLED, cámara triple, 128GB.</p>
-              <p class="price">$1.200.000</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Producto 3 -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card h-100">
-            <img
-              src="../assets/airpod_pro.png"
-              class="card-img-top"
-              alt="Audífonos"
-            />
-            <div class="card-body">
-              <h5 class="card-title">AirPods Pro</h5>
-              <p class="card-text">Cancelación de ruido y sonido envolvente.</p>
-              <p class="price">$850.000</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Producto 4 -->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-          <div class="card h-100">
-            <img
-              src="../assets/smartwach.png"
-              class="card-img-top"
-              alt="Smartwatch"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Smartwatch Xiaomi</h5>
-              <p class="card-text">Monitoreo de salud y resistencia al agua.</p>
-              <p class="price">$450.000</p>
-              <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-          </div>
-        </div>
-        <!-- Puedes seguir agregando más productos aquí -->
+        </section>
       </div>
-    </section>
+    </main>
 
     <!-- Footer -->
-    <footer class="footer">
-      <div class="footer-left">
-        <img src="../assets/logo.png" alt="TecnoLogy" class="footer-logo" />
-        <div class="footer-social">
-          <a href="#"
-            ><img
-              src="https://img.freepik.com/psd-premium/icon-3d-redes-sociales-facebook_466778-4384.jpg?semt=ais_hybrid&w=740"
-              alt="Facebook"
-          /></a>
-          <a href="#"
-            ><img
-              src="https://img.freepik.com/vector-premium/icono-logotipo-vector-instagram-logotipo-redes-sociales_901408-392.jpg?semt=ais_hybrid&w=740"
-              alt="Instagram"
-          /></a>
-          <a href="#"
-            ><img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmBOe5LXvimtpMXVQc561qXME8h5xyHrRttw&s"
-              alt="X"
-          /></a>
+    <footer class="footer text-light py-4 mt-5">
+      <div
+        class="container d-flex flex-column flex-md-row justify-content-between"
+      >
+        <div class="footer-left mb-3">
+          <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" />
+          <div class="footer-social mt-2">
+            <a href="#"
+              ><img
+                src="../assets/logos/facebook.png"
+                alt="Facebook"
+                width="30"
+            /></a>
+            <a href="#"
+              ><img
+                src="../assets/logos/instagram.png"
+                alt="Instagram"
+                width="30"
+            /></a>
+            <a href="#"
+              ><img src="../assets/logos/x.png" alt="X" width="30" class="logo-img"
+            /></a>
+          </div>
         </div>
-      </div>
-
-      <div class="footer-right">
-        <div class="footer-section">
-          <h4>Sobre nosotros</h4>
-          <ul>
-            <li><a href="#">Quiénes somos</a></li>
-            <li><a href="#">Misión y visión</a></li>
-            <li><a href="#">Trabaja con nosotros</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h4>Comunidad</h4>
-          <ul>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Foro</a></li>
-            <li><a href="#">Eventos</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h4>Tienda</h4>
-          <ul>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Soporte</a></li>
-          </ul>
+        <div class="footer-right d-flex flex-wrap gap-4">
+          <div class="footer-section">
+            <h5>Sobre nosotros</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-light">Quiénes somos</a></li>
+              <li><a href="#" class="text-light">Misión y visión</a></li>
+              <li><a href="#" class="text-light">Trabaja con nosotros</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h5>Comunidad</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-light">Blog</a></li>
+              <li><a href="#" class="text-light">Foro</a></li>
+              <li><a href="#" class="text-light">Eventos</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h5>Tienda</h5>
+            <ul class="list-unstyled">
+              <li><a href="#" class="text-light">Productos</a></li>
+              <li><a href="#" class="text-light">Ofertas</a></li>
+              <li><a href="#" class="text-light">Soporte</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
