--- a/html/registro.html
+++ b/html/registro.html
@@ -11,7 +11,7 @@
       <!-- Navbar Bootstrap -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../index.html">
         <img src="../assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -35,39 +35,41 @@
     <div class="register-card">
     <h3 class="text-center">Crear Cuenta</h3>
 
-    <form>
-      <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre completo</label>
-        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required />
-      </div>
-
-      <div class="mb-3">
-        <label for="correo" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="correo" placeholder="ejemplo@email.com" required />
-      </div>
-
-      <div class="mb-3">
-        <label for="telefono" class="form-label">Teléfono</label>
-        <input type="tel" class="form-control" id="telefono" placeholder="3001234567" />
-      </div>
-
-      <div class="mb-3">
-        <label for="contrasena" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="contrasena" placeholder="Crea una contraseña" required />
-      </div>
-
-      <div class="mb-3">
-        <label for="confirmar" class="form-label">Confirmar contraseña</label>
-        <input type="password" class="form-control" id="confirmar" placeholder="Repite la contraseña" required />
-      </div>
-
-      <button type="submit" class="btn btn-primary">Registrarme</button>
-
-      <div class="form-text text-center mt-3">
-        ¿Ya tienes cuenta? <a href="./login.html">Inicia sesión</a>
-      </div>
-    </form>
+    <form id="form-registro">
+  <div class="mb-3">
+    <label for="nombre" class="form-label">Nombre completo</label>
+    <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required />
   </div>
-</div>
+
+  <div class="mb-3">
+    <label for="correo" class="form-label">Correo electrónico</label>
+    <input type="email" class="form-control" id="correo" placeholder="ejemplo@email.com" required />
+  </div>
+
+  <div class="mb-3">
+    <label for="telefono" class="form-label">Teléfono</label>
+    <input type="tel" class="form-control" id="telefono" placeholder="3001234567" />
+  </div>
+
+  <div class="mb-3">
+    <label for="contrasena" class="form-label">Contraseña</label>
+    <input type="password" class="form-control" id="contrasena" placeholder="Crea una contraseña" required />
+  </div>
+
+  <div class="mb-3">
+    <label for="confirmar" class="form-label">Confirmar contraseña</label>
+    <input type="password" class="form-control" id="confirmar" placeholder="Repite la contraseña" required />
+  </div>
+
+  <button type="submit" class="btn btn-primary">Registrarme</button>
+
+  <div class="form-text text-center mt-3">
+    ¿Ya tienes cuenta? <a href="./login.html">Inicia sesión</a>
+  </div>
+
+ <!-- Mensaje centrado -->
+  <div id="mensaje-confirmacion">¡Registro exitoso! Hemos recibido tu información.</div>
+</form>
+<script src="../js/script.js"></script>
 </body>
 </html>
