--- a/html/ofertas.html
+++ b/html/ofertas.html
@@ -45,7 +45,7 @@
       <div class="col">
         <div class="card offer-card position-relative text-center h-100">
           <span class="discount-badge">-30%</span>
-          <img src="assets/ofertas/laptop.png" class="card-img-top" alt="Laptop en oferta" />
+          <img src="../assets/asus.png" class="card-img-top" alt="Laptop en oferta" />
           <div class="card-body">
             <h5 class="card-title">Laptop ASUS Gamer</h5>
             <p class="price">$3.200.000</p>
@@ -59,7 +59,7 @@
       <div class="col">
         <div class="card offer-card position-relative text-center h-100">
           <span class="discount-badge">-50%</span>
-          <img src="assets/ofertas/audifonos.png" class="card-img-top" alt="Audífonos" />
+          <img src="../assets/audifonos.png" class="card-img-top" alt="Audífonos" />
           <div class="card-body">
             <h5 class="card-title">Audífonos Bluetooth</h5>
             <p class="price">$200.000</p>
@@ -73,7 +73,7 @@
       <div class="col">
         <div class="card offer-card position-relative text-center h-100">
           <span class="discount-badge">-20%</span>
-          <img src="assets/ofertas/tablet.png" class="card-img-top" alt="Tablet" />
+          <img src="../assets/tablet.png" class="card-img-top" alt="Tablet" />
           <div class="card-body">
             <h5 class="card-title">Tablet Samsung Galaxy</h5>
             <p class="price">$1.000.000</p>
