--- a/html/detalle-producto.html
+++ b/html/detalle-producto.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
-        <img src="./assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
+        <img src="../assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -71,7 +71,7 @@
         <li>512 GB de almacenamiento SSD</li>
         <li>Windows 11 preinstalado</li>
       </ul>
-      <button class="btn btn-primary btn-lg mt-3">Añadir al carrito 🛒</button>
+      <button class="btn btn-primary btn-lg mt-3">Añadir al carrito </button>
     </div>
   </div>
 </main>
