--- a/html/contacto.html
+++ b/html/contacto.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
-        <img src="./assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
+        <img src="../assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
