--- a/html/productos.html
+++ b/html/productos.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
           <img
-            src="./assets/logos/logo.png"
+            src="../assets/logos/logo.png"
             alt="Logo"
             width="120"
             class="logo-img"
