--- a/html/detalle-producto.html
+++ b/html/detalle-producto.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <!-- Navbar Bootstrap -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
+  <nav class="navbar navbar-expand-lg navbar-custom px-3"></nav>
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../index.html">
         <img src="../assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -138,14 +138,14 @@
   </section>
 </main>
 
-<!-- Footer -->
-<footer class="footer text-light py-4 mt-5">
+   <!-- Footer -->
+<footer class="footer  text-light py-4 mt-5">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
     <div class="footer-left mb-3">
-      <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img"/>
+      <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img" />
       <div class="footer-social mt-2">
-        <a href="#"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
-        <a href="#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
+        <a href="https://www.facebook.com/?_rdr"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
+        <a href="https://www.instagram.com/tu_usuario/#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
         <a href="#"><img src="../assets/logos/x.png" alt="X" width="30" /></a>
       </div>
     </div>
@@ -153,25 +153,25 @@
       <div class="footer-section">
         <h5>Sobre nosotros</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Quiénes somos</a></li>
-          <li><a href="#" class="text-light">Misión y visión</a></li>
-          <li><a href="#" class="text-light">Trabaja con nosotros</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Quiénes somos</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Misión y visión</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Trabaja con nosotros</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h5>Comunidad</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Blog</a></li>
-          <li><a href="#" class="text-light">Foro</a></li>
-          <li><a href="#" class="text-light">Eventos</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Blog</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Foro</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Eventos</a></li>
         </ul>
       </div>
       <div class="footer-section">
         <h5>Tienda</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Productos</a></li>
-          <li><a href="#" class="text-light">Ofertas</a></li>
-          <li><a href="#" class="text-light">Soporte</a></li>
+          <li><a href="./productos.html" class="text-light">Productos</a></li>
+          <li><a href="./ofertas.html" class="text-light">Ofertas</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Soporte</a></li>
         </ul>
       </div>
     </div>
