--- a/html/registro.html
+++ b/html/registro.html
@@ -68,7 +68,7 @@
   </div>
 
  <!-- Mensaje centrado -->
-  <div id="mensaje-confirmacion">¡Registro exitoso! Hemos recibido tu información.</div>
+  <div id="mensaje-confirmacion" style="display: none; margin-top: 15px;" class="text-success fw-bold text-center"></div>
 </form>
 <script src="../js/script.js"></script>
 </body>
