--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navbar Bootstrap -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
+     <nav class="navbar navbar-expand-lg navbar-custom px-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">
         <img src="./assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
@@ -65,30 +65,31 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-  <!-- Opiniones -->
-  <section class="opiniones-container">
-    <h2 class="opiniones-titulo">Opiniones de nuestros clientes</h2>
-    <div class="opiniones">
-      <div class="opinion-card">
-        <img src="./assets/usuarios/usuario-1.png" alt="Usuario 1">
-        <h3>Ana Torres</h3>
-        <p>⭐️⭐️⭐️⭐️⭐️</p>
-        <p>"Excelente servicio, el producto llegó en perfecto estado y muy rápido."</p>
-      </div>
-      <div class="opinion-card">
-        <img src="./assets/usuarios/usuario-2.png" alt="Usuario 2">
-        <h3>Carlos Mendoza</h3>
-        <p>⭐️⭐️⭐️⭐️</p>
-        <p>"Muy buena atención al cliente, y productos de calidad."</p>
-      </div>
-      <div class="opinion-card">
-        <img src="./assets/usuarios/usuario-3.png" alt="Usuario 3">
-        <h3>Laura Ruiz</h3>
-        <p>⭐️⭐️⭐️⭐️⭐️</p>
-        <p>"Compré un portátil y superó mis expectativas. ¡Recomendado!"</p>
-      </div>
+ <!-- Opiniones -->
+<section class="opiniones-container">
+  <h2 class="opiniones-titulo">Opiniones de nuestros clientes</h2>
+  <div class="opiniones">
+    <div class="opinion-card">
+      <img src="./assets/usuarios/usuario-1.png" alt="Usuario 1">
+      <h3>Ana Torres</h3>
+      <p>⭐️⭐️⭐️⭐️⭐️</p>
+      <p>"Excelente servicio, el producto llegó en perfecto estado y muy rápido."</p>
     </div>
-  </section>
+    <div class="opinion-card">
+      <img src="./assets/usuarios/usuario-2.png" alt="Usuario 2">
+      <h3>Carlos Mendoza</h3>
+      <p>⭐️⭐️⭐️⭐️</p>
+      <p>"Muy buena atención al cliente, y productos de calidad."</p>
+    </div>
+    <div class="opinion-card">
+      <img src="./assets/usuarios/usuario-3.png" alt="Usuario 3">
+      <h3>Laura Ruiz</h3>
+      <p>⭐️⭐️⭐️⭐️⭐️</p>
+      <p>"Compré un portátil y superó mis expectativas. ¡Recomendado!"</p>
+    </div>
+  </div>
+</section>
+
 
   <!-- Footer -->
 <footer class="footer  text-light py-4 mt-5">
@@ -96,8 +97,8 @@
     <div class="footer-left mb-3">
       <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img" />
       <div class="footer-social mt-2">
-        <a href="#"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
-        <a href="#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
+        <a href="https://www.facebook.com/?_rdr"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
+        <a href="https://www.instagram.com/tu_usuario/#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
         <a href="#"><img src="../assets/logos/x.png" alt="X" width="30" /></a>
       </div>
     </div>
