--- a/html/login.html
+++ b/html/login.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Inicio sesión</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Iniciar sesión</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="body-login">
 
-     <div class="login-card">
-    <h3 class="text-center">Iniciar Sesión</h3>
+  <div class="container mt-5">
+    <div class="card p-4 mx-auto" style="max-width: 400px;">
+      <h3 class="text-center">Iniciar Sesión</h3>
 
-    <form>
-      <div class="mb-3">
-        <label for="correo" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="correo" placeholder="ejemplo@email.com" required />
-      </div>
-
-      <div class="mb-3">
-        <label for="contrasena" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="contrasena" placeholder="Tu contraseña" required />
-      </div>
-
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="recordarme" />
-        <label class="form-check-label" for="recordarme">Recordarme</label>
-      </div>
-
-      <button type="submit" class="btn btn-success">Ingresar</button>
-
-      <div class="form-text text-center mt-3">
-        ¿No tienes cuenta? <a href="./registro.html">Regístrate</a><br />
-        <a href="#">¿Olvidaste tu contraseña?</a>
-      </div>
-    </form>
+      <form id="form-login">
+        <div class="mb-3">
+          <label for="correo" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="correo" placeholder="ejemplo@email.com" required>
+        </div>
+        <div class="mb-3">
+          <label for="contrasena" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="contrasena" placeholder="Tu contraseña" required>
+        </div>
+        <button type="submit" class="btn btn-success w-100">Ingresar</button>
+      </form>
+    </div>
   </div>
 
+  <script>
+    // Esperar a que el DOM esté completamente cargado
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById("form-login");
+      form.addEventListener("submit", function (e) {
+        e.preventDefault(); // Evita que se recargue la página
+        // Aquí puedes validar datos si lo necesitas
+        window.location.href = "../index.html"; // Redirige al index (ajusta la ruta si es necesario)
+      });
+    });
+  </script>
 </body>
 </html>
