--- a/html/ofertas.html
+++ b/html/ofertas.html
@@ -87,58 +87,44 @@
   </div>
 
     <!-- Footer -->
-    <footer class="footer text-light py-4 mt-5">
-      <div
-        class="container d-flex flex-column flex-md-row justify-content-between"
-      >
-        <div class="footer-left mb-3">
-          <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img"/>
-          <div class="footer-social mt-2">
-            <a href="#"
-              ><img
-                src="../assets/logos/facebook.png"
-                alt="Facebook"
-                width="30"
-            /></a>
-            <a href="#"
-              ><img
-                src="../assets/logos/instagram.png"
-                alt="Instagram"
-                width="30"
-            /></a>
-            <a href="#"
-              ><img src="../assets/logos/x.png" alt="X" width="30"
-            /></a>
-          </div>
-        </div>
-        <div class="footer-right d-flex flex-wrap gap-4">
-          <div class="footer-section">
-            <h5>Sobre nosotros</h5>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-light">Quiénes somos</a></li>
-              <li><a href="#" class="text-light">Misión y visión</a></li>
-              <li><a href="#" class="text-light">Trabaja con nosotros</a></li>
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h5>Comunidad</h5>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-light">Blog</a></li>
-              <li><a href="#" class="text-light">Foro</a></li>
-              <li><a href="#" class="text-light">Eventos</a></li>
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h5>Tienda</h5>
-            <ul class="list-unstyled">
-              <li><a href="#" class="text-light">Productos</a></li>
-              <li><a href="#" class="text-light">Ofertas</a></li>
-              <li><a href="#" class="text-light">Soporte</a></li>
-            </ul>
-          </div>
-        </div>
+<footer class="footer  text-light py-4 mt-5">
+  <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <div class="footer-left mb-3">
+      <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img" />
+      <div class="footer-social mt-2">
+        <a href="https://www.facebook.com/?_rdr"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
+        <a href="https://www.instagram.com/tu_usuario/#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
+        <a href="#"><img src="../assets/logos/x.png" alt="X" width="30" /></a>
       </div>
-    </footer>
+    </div>
+    <div class="footer-right d-flex flex-wrap gap-4">
+      <div class="footer-section">
+        <h5>Sobre nosotros</h5>
+        <ul class="list-unstyled">
+          <li><a href="./sobre-nosostros.html" class="text-light">Quiénes somos</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Misión y visión</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Trabaja con nosotros</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h5>Comunidad</h5>
+        <ul class="list-unstyled">
+          <li><a href="./sobre-nosostros.html" class="text-light">Blog</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Foro</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Eventos</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h5>Tienda</h5>
+        <ul class="list-unstyled">
+          <li><a href="./productos.html" class="text-light">Productos</a></li>
+          <li><a href="./ofertas.html" class="text-light">Ofertas</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Soporte</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/script.js"></script>
