--- a/html/sobre-nosostros.html
+++ b/html/sobre-nosostros.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Navbar Bootstrap -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom px-3">
+  <nav class="navbar navbar-expand-lg navbar-custom px-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">
         <img src="../assets/logos/logo.png" alt="Logo" width="120" class="logo-img">
@@ -20,7 +20,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav gap-2">
-          <li class="nav-item"><a class="nav-link" href="../html/inicio.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="../html/productos.html">Tienda</a></li>
           <li class="nav-item"><a class="nav-link" href="../html/sobre-nosostros.html">Sobre Nosotros</a></li>
           <li class="nav-item"><a class="nav-link" href="../html/contacto.html">Contacto</a></li>
@@ -166,45 +166,45 @@
 </section>
 
 
-  <!-- Footer -->
-  <footer class="footer text-light py-4 mt-5">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <div class="footer-left mb-3">
-        <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120"  class="logo-img"/>
-        <div class="footer-social mt-2">
-          <a href="#"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
-          <a href="#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
-          <a href="#"><img src="../assets/logos/x.png" alt="X" width="30" /></a>
-        </div>
-      </div>
-      <div class="footer-right d-flex flex-wrap gap-4">
-        <div class="footer-section">
-          <h5>Sobre nosotros</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-light">Quiénes somos</a></li>
-            <li><a href="#" class="text-light">Misión y visión</a></li>
-            <li><a href="#" class="text-light">Trabaja con nosotros</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h5>Comunidad</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-light">Blog</a></li>
-            <li><a href="#" class="text-light">Foro</a></li>
-            <li><a href="#" class="text-light">Eventos</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h5>Tienda</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-light">Productos</a></li>
-            <li><a href="#" class="text-light">Ofertas</a></li>
-            <li><a href="#" class="text-light">Soporte</a></li>
-          </ul>
-        </div>
+   <!-- Footer -->
+<footer class="footer  text-light py-4 mt-5">
+  <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <div class="footer-left mb-3">
+      <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img" />
+      <div class="footer-social mt-2">
+        <a href="https://www.facebook.com/?_rdr"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
+        <a href="https://www.instagram.com/tu_usuario/#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
+        <a href="#"><img src="../assets/logos/x.png" alt="X" width="30" /></a>
       </div>
     </div>
-  </footer>
+    <div class="footer-right d-flex flex-wrap gap-4">
+      <div class="footer-section">
+        <h5>Sobre nosotros</h5>
+        <ul class="list-unstyled">
+          <li><a href="./sobre-nosostros.html" class="text-light">Quiénes somos</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Misión y visión</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Trabaja con nosotros</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h5>Comunidad</h5>
+        <ul class="list-unstyled">
+          <li><a href="./sobre-nosostros.html" class="text-light">Blog</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Foro</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Eventos</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h5>Tienda</h5>
+        <ul class="list-unstyled">
+          <li><a href="./productos.html" class="text-light">Productos</a></li>
+          <li><a href="./ofertas.html" class="text-light">Ofertas</a></li>
+          <li><a href="./sobre-nosostros.html" class="text-light">Soporte</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../js/script.js"></script>
