--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 <footer class="footer  text-light py-4 mt-5">
   <div class="container d-flex flex-column flex-md-row justify-content-between">
     <div class="footer-left mb-3">
-      <img src="../assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img" />
+      <img src="./assets/logos/logo.png" alt="TecnoLogy" width="120" class="logo-img" />
       <div class="footer-social mt-2">
-        <a href="https://www.facebook.com/?_rdr"><img src="../assets/logos/facebook.png" alt="Facebook" width="30" /></a>
-        <a href="https://www.instagram.com/tu_usuario/#"><img src="../assets/logos/instagram.png" alt="Instagram" width="30" /></a>
-        <a href="#"><img src="../assets/logos/x.png" alt="X" width="30" /></a>
+        <a href="https://www.facebook.com/?_rdr"><img src="./assets/logos/facebook.png" alt="Facebook" width="30" /></a>
+        <a href="https://www.instagram.com/tu_usuario/#"><img src="./assets/logos/instagram.png" alt="Instagram" width="30" /></a>
+        <a href="#"><img src="./assets/logos/x.png" alt="X" width="30" /></a>
       </div>
     </div>
     <div class="footer-right d-flex flex-wrap gap-4">
